# DLAf-optimized

./: CMakeLists.txt  Makefile  dlaf.cpp  fastRandom.h  readme.md
dlaf/: CMakeLists.txt
